--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "vue-terminal": "^1.2.0",
     "webpack": "^5.87.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "xterm": "^5.2.1"
   },
   "devDependencies": {
     "@ampproject/remapping": "^2.2.1",
@@ -42,6 +43,11 @@
     "@babel/highlight": "^7.22.5",
     "@babel/types": "^7.22.5",
     "@electron-forge/cli": "^6.2.1",
+    "@electron-forge/maker-deb": "^6.2.1",
+    "@electron-forge/maker-rpm": "^6.2.1",
+    "@electron-forge/maker-squirrel": "^6.2.1",
+    "@electron-forge/maker-zip": "^6.2.1",
+    "@electron-forge/plugin-auto-unpack-natives": "^6.2.1",
     "@jridgewell/gen-mapping": "^0.3.3",
     "@jridgewell/resolve-uri": "^3.1.1",
     "@jridgewell/set-array": "^1.1.2",
