--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "name": "vss-task",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
+  "authors":"github262302",
+  "description": "更方便的启动和管理项目中的任务(vscode-task,npm...)",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
@@ -16,24 +18,16 @@
     "make": "electron-forge make"
   },
   "dependencies": {
-    "@babel/core": "^7.22.5",
-    "@babel/preset-env": "^7.22.5",
-    "@element-plus/icons-vue": "^2.1.0",
-    "babel-loader": "^9.1.2",
-    "electron-squirrel-startup": "^1.0.0",
     "element-plus": "^2.3.6",
     "highlight.js": "^11.8.0",
     "lodash-es": "^4.17.21",
     "pinia": "^2.1.3",
     "ramda": "^0.29.0",
-    "sass": "^1.63.4",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2",
     "vue-terminal": "^1.2.0",
-    "webpack": "^5.87.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "xterm": "^5.2.1"
+    "xterm": "^5.2.1",
+    "xterm-addon-web-links": "^0.8.0"
   },
   "devDependencies": {
     "@ampproject/remapping": "^2.2.1",
@@ -60,8 +54,18 @@
     "eslint-plugin-vue": "^9.11.0",
     "js-tokens": "^8.0.1",
     "nodemon": "^2.0.22",
-    "vite": "^4.3.9"
+    "vite": "^4.3.9",
+    "webpack": "^5.87.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
+    "@babel/core": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
+    "@element-plus/icons-vue": "^2.1.0",
+    "babel-loader": "^9.1.2",
+    "tree-kill": "^1.2.2",
+    "electron-squirrel-startup": "^1.0.0",
+    "sass": "^1.63.4"
   },
   "main": "./deskdist/main.cjs",
-  "type": "module"
+  "type": "commonjs"
 }
