feat;底部状态栏,架构修改+pinia

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,7 +5,13 @@
         "paths": {
             "@/*": [
                 "./src/*"
+            ],
+            "vss/*":[
+                "./electron/*"
             ]
-        }
+        },
+        "target": "ESNext",
+        "module": "CommonJS",
     },
+    "include": ["./electron/**/*.js","./src/**/*.js","./src/**/*.vue"]
 }
