--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
   "name": "vss-task",
-  "version": "0.0.1",
-  "version": "0.0.2",
+  "version": "0.0.4",
   "private": true,
-  "authors":"github262302",
+  "authors": "github262302",
   "description": "更方便的启动和管理项目中的任务(vscode-task,npm...)",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
+    "render:dev": "vite",
+    "render:build": "vite build",
+    "render:preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "electron:Start": "electron .",
-    "electron:webpackDev": "pnpm webpack build --watch  -c .\\electron.webpack.js",
-    "electron:webpackBuild": "pnpm webpack  -c .\\electron.webpack.js",
+    "ele:Start": "electron .",
+    "ele:build-watch": "webpack build --watch  -c ./electron.webpack.mjs",
+    "ele:build": "webpack  -c ./electron.webpack.mjs",
     "electron:Start:watch": "nodemon --ignore src --delay 1 --exec \"powershell cls;pnpm electron:Start\"",
-    "start": "electron-forge start",
-    "package": "electron-forge package",
-    "make": "electron-forge make"
+    "app:start": "electron-forge start",
+    "app:package": "pnpm ele:build & pnpm electron-forge package",
+    "app:make": "pnpm ele:build & pnpm electron-forge make"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.4",
+    "ant-design": "^1.0.0",
+    "antd": "^5.6.3",
     "element-plus": "^2.3.6",
     "highlight.js": "^11.8.0",
     "lodash-es": "^4.17.21",
@@ -33,9 +35,11 @@
   "devDependencies": {
     "@ampproject/remapping": "^2.2.1",
     "@babel/code-frame": "^7.22.5",
+    "@babel/core": "^7.22.5",
     "@babel/generator": "^7.22.5",
     "@babel/helper-validator-identifier": "^7.22.5",
     "@babel/highlight": "^7.22.5",
+    "@babel/preset-env": "^7.22.5",
     "@babel/types": "^7.22.5",
     "@electron-forge/cli": "^6.2.1",
     "@electron-forge/maker-deb": "^6.2.1",
@@ -43,30 +47,31 @@
     "@electron-forge/maker-squirrel": "^6.2.1",
     "@electron-forge/maker-zip": "^6.2.1",
     "@electron-forge/plugin-auto-unpack-natives": "^6.2.1",
+    "@element-plus/icons-vue": "^2.1.0",
     "@jridgewell/gen-mapping": "^0.3.3",
     "@jridgewell/resolve-uri": "^3.1.1",
     "@jridgewell/set-array": "^1.1.2",
     "@jridgewell/sourcemap-codec": "^1.4.15",
     "@jridgewell/trace-mapping": "^0.3.18",
     "@vitejs/plugin-vue": "^4.2.3",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^9.1.2",
     "chalk": "^5.2.0",
     "electron": "^25.2.0",
+    "electron-squirrel-startup": "^1.0.0",
     "eslint": "^8.39.0",
+    "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.11.0",
     "js-tokens": "^8.0.1",
     "nodemon": "^2.0.22",
+    "prettier": "^2.8.8",
+    "sass": "^1.63.4",
+    "tree-kill": "^1.2.2",
+    "typescript-plugin-css-modules": "^5.0.1",
     "vite": "^4.3.9",
     "webpack": "^5.87.0",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1",
-    "@babel/core": "^7.22.5",
-    "@babel/preset-env": "^7.22.5",
-    "@element-plus/icons-vue": "^2.1.0",
-    "babel-loader": "^9.1.2",
-    "tree-kill": "^1.2.2",
-    "electron-squirrel-startup": "^1.0.0",
-    "sass": "^1.63.4"
+    "webpack-dev-server": "^4.15.1"
   },
-  "main": "./deskdist/main.cjs",
-  "type": "module"
+  "main": "./dist/main/main.cjs"
 }
