fix;整理启动逻辑

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "authors": "github262302",
   "description": "更方便的启动和管理项目中的任务(vscode-task,npm...)",
   "scripts": {
+    "dev":"node ./scripts/dev-runner.cjs",
     "render:dev": "vite",
     "render:build": "vite build",
     "render:preview": "vite preview",
@@ -21,6 +22,7 @@
     "@ant-design/icons": "^5.1.4",
     "ant-design": "^1.0.0",
     "antd": "^5.6.3",
+    "cfonts": "^3.2.0",
     "element-plus": "^2.3.6",
     "highlight.js": "^11.8.0",
     "lodash-es": "^4.17.21",
