--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "authors": "github262302",
   "description": "更方便的启动和管理项目中的任务(vscode-task,npm...)",
   "scripts": {
-    "dev":"node ./scripts/dev-runner.cjs",
+    "dev": "node ./scripts/dev-runner.cjs",
     "render:dev": "vite",
     "render:build": "vite build",
     "render:preview": "vite preview",
@@ -20,14 +20,18 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
+    "@reduxjs/toolkit": "1",
     "ant-design": "^1.0.0",
-    "antd": "^5.6.3",
+    "antd": "^5.9.0",
     "cfonts": "^3.2.0",
     "element-plus": "^2.3.6",
     "highlight.js": "^11.8.0",
     "lodash-es": "^4.17.21",
     "pinia": "^2.1.3",
     "ramda": "^0.29.0",
+    "react": "18",
+    "react-dom": "18.2.0",
+    "react-redux": "8",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2",
     "vue-terminal": "^1.2.0",
@@ -55,6 +59,9 @@
     "@jridgewell/set-array": "^1.1.2",
     "@jridgewell/sourcemap-codec": "^1.4.15",
     "@jridgewell/trace-mapping": "^0.3.18",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
+    "@vitejs/plugin-react": "^4.0.4",
     "@vitejs/plugin-vue": "^4.2.3",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^9.1.2",
@@ -63,12 +70,14 @@
     "electron-squirrel-startup": "^1.0.0",
     "eslint": "^8.39.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-vue": "^9.11.0",
     "js-tokens": "^8.0.1",
     "nodemon": "^2.0.22",
     "prettier": "^2.8.8",
     "sass": "^1.63.4",
     "tree-kill": "^1.2.2",
+    "typescript": "^5.2.2",
     "typescript-plugin-css-modules": "^5.0.1",
     "vite": "^4.3.9",
     "webpack": "^5.87.0",
