--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "vue-router": "^4.2.2",
     "vue-terminal": "^1.2.0",
     "xterm": "^5.2.1",
-    "xterm-addon-web-links": "^0.8.0"
+    "xterm-addon-attach": "^0.9.0",
+    "xterm-addon-fit": "^0.8.0",
+    "xterm-addon-web-links": "^0.8.0",
+    "xterm-headless": "^5.3.0"
   },
   "devDependencies": {
     "@ampproject/remapping": "^2.2.1",
