--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "cfonts": "^3.2.0",
     "element-plus": "^2.3.6",
     "highlight.js": "^11.8.0",
+    "lodash": "^4.17.21",
     "lodash-es": "^4.17.21",
     "pinia": "^2.1.3",
     "ramda": "^0.29.0",
