--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "authors": "github262302",
-  "description": "更方便的启动和管理项目中的任务(vscode-task,npm...)",
+  "description": "一个小而美的任务管理工具",
   "scripts": {
     "dev": "node ./scripts/dev-runner.cjs",
     "render:dev": "vite",
@@ -16,7 +16,8 @@
     "electron:Start:watch": "nodemon --ignore src --delay 1 --exec \"powershell cls;pnpm electron:Start\"",
     "app:start": "electron-forge start",
     "app:package": "pnpm render:build & pnpm ele:build & pnpm electron-forge package",
-    "app:make": "pnpm render:build & pnpm ele:build & pnpm electron-forge make"
+    "app:makeWin64": "pnpm electron-forge make --arch x64",
+    "app:remakeWin64": "pnpm render:build & pnpm ele:build & pnpm electron-forge make --arch x64"
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
